# iceberg-rs

./: .gitignore  Cargo.toml  GEMINI.md  README.md  plan.md
crates/iceberg-cli/: Cargo.toml
crates/iceberg-cli/src/: main.rs
crates/iceberg-core/: Cargo.toml
crates/iceberg-core/src/: types.rs
test-gen-python/: generate_manifest_list.py  generate_metadata.py
